--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Animes vistos MartL7 </title>
-    <link rel="stylesheet" href="Css/style.css?v=2">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
+    <link rel="stylesheet" href="Css/style.css?v=2">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- 
         Codigo By: Geovas or MartL7
@@ -18,7 +23,10 @@
 
     <header>
         <div class="Menu">
-            <div class="Titulo"> MartL7</div>
+            <div class="XD">
+                <button onclick="CambiarTema()" class="btn rounded-fill"><i id="icon" class="bi bi-moon-fill"></i></button>
+                <h1 class="Titulo"> MartL7</h1>
+            </div>
             <ul class="Enlaces">
                 <li><a href="#" onclick="Agregar()"> Agregar </a></li>
                 <li><a href="#" onclick="Agregar()"> Comedia </a></li>
@@ -27,7 +35,6 @@
             </ul>
         </div>
     </header>
-
     <div class="Con">
         <h2> Animes Vistos </h2>
     </div>
@@ -54,5 +61,6 @@
     </div>
 
     <script src="Js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
