--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="light">
+<html lang="es" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
-    <link rel="stylesheet" href="Css/style.css?v=2">
+    <link rel="stylesheet" href="Css/style.css?V=4">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- 
         Codigo By: Geovas or MartL7
@@ -20,24 +20,25 @@
     -->
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm bg-body-tertiary fw-bold">
+        <div class="container-fluid">
+          <button onclick="CambiarTema()" class="btn rounded-fill"><i class="bi bi-sun-fill" id="icon"></i></button>
+          <h2 class="navbar-brand px-5 mt-1 fw-bold"> MartL7 </h2>
 
-    <header>
-        <div class="Menu">
-            <div class="XD">
-                <button onclick="CambiarTema()" class="btn rounded-fill"><i id="icon" class="bi bi-moon-fill"></i></button>
-                <h1 class="Titulo"> MartL7</h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link active" aria-current="page" href="#" onclick="Agregar()"> Agregar Más </a>
+              <a class="nav-link" href="#" onclick="Agregar()"> Romance </a>
+              <a class="nav-link" href="#" onclick="Agregar()"> Ficción </a>
             </div>
-            <ul class="Enlaces">
-                <li><a href="#" onclick="Agregar()"> Agregar </a></li>
-                <li><a href="#" onclick="Agregar()"> Comedia </a></li>
-                <li><a href="#" onclick="Agregar()"> Ficcion </a></li>
-                <li><a href="#" onclick="Agregar()"> Romance </a></li>
-            </ul>
+          </div>
         </div>
-    </header>
-    <div class="Con">
-        <h2> Animes Vistos </h2>
-    </div>
+      </nav>
+
     <div class="Contenedor-Imagenes">
         <img src="https://cl.buscafs.com/www.tomatazos.com/public/uploads/images/417177/417177.jpg">
         <img src="https://m.media-amazon.com/images/M/MV5BYWY2NzEwYWMtMTk2NS00MTQ1LWI4M2EtN2I5NjMzOGUyYmM0XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_FMjpg_UX1000_.jpg">
